Bug 1762255 - Convert MobileViewport intrinric size to app units and use it in the comparison. r=botond,geckoview-reviewers,m_kato

Differential Revision: https://phabricator.services.mozilla.com/D169288